added functionality to allow a user to enter information saying they are interested in hosting a house party. [completed: 58]

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -308,6 +308,11 @@ acronym {
 	background-color: #fff;
 	display: none;
 }
+/* @end */
+
+/* @group house_party */
+#house_party_dialog { display: none; }
+/* @end */
 
 
 /*
