--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -17,5 +17,6 @@
 {% endblock %}
 {% block minorcol %}
 	{% include 'rah/_points.html' %}
+	{% include 'rah/_magnify.html' %}
 {% endblock %}
 {% block js %}page_home_logged_in{% endblock %}
