--- a/templates/rah/_action_nugget.html
+++ b/templates/rah/_action_nugget.html
@@ -8,8 +8,10 @@
 		</p>
 		<div class='task_list'>
 			{% for action_task in action.action_tasks %}
-				<form action="{% url rah.views.action_task action_task.id %}" class="action_task_submitter" method='post' accept-charset='utf-8'>
-					<input type='checkbox' name='task_completed' {% if action_task.completed %}checked='checked'{% endif %}>{{ action_task.name }}</input>
+				<form action="{% url rah.views.action_task action_task.id %}" class="action_task_submitter" method='post'>
+					<p>
+						<input type='checkbox' name='task_completed' {% if action_task.completed %}checked='checked'{% endif %} />{{ action_task.name }}
+					</p>
 				</form>
 			{% endfor %}
 		</div>
