--- a/templates/rah/account.html
+++ b/templates/rah/account.html
@@ -4,8 +4,8 @@
     <form action="" method="post">
         <div>{{form.as_p}}</div>
         <div><a href="{% url django.contrib.auth.views.password_change %}">Change your password</a></div>
-        <input type="submit" value="Submit" />
-        <input type="hidden" name="next" value="{{ next|escape }}" />
+        <div><input type="submit" value="Submit" /></div>
+        <div><input type="hidden" name="next" value="{{ next|escape }}" /></div>
         {% csrf_token %}
     </form>
     
