--- a/templates/rah/action_detail.html
+++ b/templates/rah/action_detail.html
@@ -11,9 +11,9 @@
 	    <h2>{{ task.sequence }}) {{ task.name }} ({{ task.points }} points)</h2>
 	    {% if user.is_authenticated %}
 	    <form action="{% url rah.views.action_task task.id %}" class="action_task_submitter" method="post" accept-charset="utf-8">
-	        <input type="checkbox" name="task_completed" {% if task.completed %}checked="checked"{% endif %}>Completed</input>
-	        <input type="hidden" name="task_id" value="{{task.id}}"/>
-	        <span><input type="submit" value="Update"/></span>
+	        <div><input type="checkbox" name="task_completed" {% if task.completed %}checked="checked"{% endif %} />Completed</div>
+	        <div><input type="hidden" name="task_id" value="{{task.id}}" /></div>
+	        <div><input type="submit" value="Update" /></div>
 	        {% csrf_token %}
 	    </form>
 	    {% endif %}
