--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -1,19 +1,23 @@
 {% extends "rah/base.html" %}
 {% block content %}
-	<div class="actions_block">
-		<h2>In Progress Actions</h2>
-        {% for action in in_progress %}
-			{% include 'rah/_action_nugget.html' %}
-        {% endfor %}
-		<div class="spacer" />
-	</div>
-	<div class="actions_block">
-		<h2>Recommended Actions</h2>
-	    {% for action in recommended %}
-	        {% include 'rah/_action_nugget.html' %}
-	    {% endfor %}
-		<div class="spacer" />
-	</div>
+	{% if in_progress %}
+		<div class="actions_block">
+			<h2>In Progress Actions</h2>
+	        {% for action in in_progress %}
+				{% include 'rah/_action_nugget.html' %}
+	        {% endfor %}
+			<div class="spacer" />
+		</div>
+	{% endif %}
+	{% if recommended %}
+		<div class="actions_block">
+			<h2>Recommended Actions</h2>
+		    {% for action in recommended %}
+		        {% include 'rah/_action_nugget.html' %}
+		    {% endfor %}
+			<div class="spacer" />
+		</div>
+	{% endif %}
 {% endblock %}
 {% block minorcol %}
 	{% include 'rah/_points.html' %}
