--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -5,6 +5,7 @@
         <input type="submit" value="Submit" />
         {% comment %}
             FIXME: find out why the next parameter isn't being used
+			FIXME: add a javascript check to make sure the password meets the required length
         {% endcomment %}
         <input type="hidden" name="next" value="{{ next|escape }}" />
         {% csrf_token %}
