--- a/templates/rah/_action_nugget.html
+++ b/templates/rah/_action_nugget.html
@@ -10,7 +10,7 @@
 			{% for action_task in action.action_tasks %}
 				<form action="{% url rah.views.action_task action_task.id %}" class="action_task_submitter" method='post'>
 					<p>
-						<input type='checkbox' name='task_completed' {% if action_task.completed %}checked='checked'{% endif %} />{{ action_task.name }}
+						<input type='checkbox' name='task_completed' {% if action_task.completed %}checked='checked'{% endif %} {% if not is_my_profile %}disabled='disabled' {% endif %}/>{{ action_task.name }}
 					</p>
 				</form>
 			{% endfor %}
