-dropping about us link for now -bringing setting.sample.py uptodate

--- a/templates/rah/base.html
+++ b/templates/rah/base.html
@@ -31,7 +31,7 @@
                 <div id="nav">
                     <a href="{% url rah.views.index %}">Home</a>&nbsp;
                     <a href="{% url rah.views.action_show %}">Actions</a>
-                    <a href="">About us</a>
+                    {# <a href="">About us</a> #}
                 </div>
             </div>
         </div>
