--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -6,7 +6,7 @@
 	        {% for action in in_progress %}
 				{% include 'rah/_action_nugget.html' %}
 	        {% endfor %}
-			<div class="spacer" />
+			<br class="spacer" />
 		</div>
 	{% endif %}
 	{% if recommended %}
@@ -15,7 +15,7 @@
 		    {% for action in recommended %}
 		        {% include 'rah/_action_nugget.html' %}
 		    {% endfor %}
-			<div class="spacer" />
+			<br class="spacer" />
 		</div>
 	{% endif %}
 {% endblock %}
