changed the div.spacer element in action_show to br.spacer, this should have been done in the previous commit, but was missed.

--- a/templates/rah/action_show.html
+++ b/templates/rah/action_show.html
@@ -11,7 +11,7 @@
 		{% for action in actions %}
 			{% include 'rah/_action_nugget.html' %}
 		{% endfor %}
-		<div class='spacer' />
+		<br class='spacer' />
 	{% endfor %}
 {% endblock %}
 {% block minorcol %}
