added an rss feed for blog posts [completed: 61]

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
         <link rel="shortcut icon" href="{{ MEDIA_URL }}images/theme/favico.ico"/>
         <link rel="stylesheet" href="{{ MEDIA_URL }}css/style{%if not debug%}_min{%endif%}.css" type="text/css" media="screen" charset="utf-8"/>
+		<link rel="alternate" type="application/rss+xml"  href="{% url feed 'blog' %}" title="Repower@Home Blog" />
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-11623269-1']);
