--- a/static/css/style.css
+++ b/static/css/style.css
@@ -319,6 +319,12 @@ acronym {
 #house_party_dialog { display: none; }
 /* @end */
 
+/* @group comments */
+.comment p {
+    
+}
+/* @end */
+
 
 /*
 * jQuery UI CSS Framework
