--- a/templates/rah/home_logged_in.html
+++ b/templates/rah/home_logged_in.html
@@ -1,5 +1,9 @@
 {% extends "rah/base.html" %}
 {% block content %}
+    <div id="placeholder" style="width:600px;height:300px"></div>
+    <script type="text/javascript" charset="utf-8">
+        var chart_data = {{chart_data|safe}};
+    </script>
 	{% if in_progress %}
 		<div class="actions_block">
 			<h2>In Progress Actions</h2>
@@ -23,4 +27,10 @@
 	{% include 'rah/_points.html' %}
 	{% include 'rah/_magnify.html' %}
 {% endblock %}
+
+{% block extrajs %}
+    <!--[if IE]><script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/excanvas.min.js"></script><![endif]-->
+    <script type="text/javascript" charset="utf-8" src="{{ MEDIA_URL }}js/jquery.flot.min.js"></script>
+{% endblock %}
+
 {% block js %}page_home_logged_in{% endblock %}
