--- a/templates/rah/_magnify.html
+++ b/templates/rah/_magnify.html
@@ -1,7 +1,5 @@
 <h2>Magnify Your Impact</h2>
-<ul>
-	<li><a href='{% url rah.views.house_party %}' class='house_party'>Host a house party</a></li>
-</ul>
+<p><a href='{% url rah.views.house_party %}' class='house_party'>Host a house party</a></p>
 <div id='house_party_dialog'>
 	<form action="{% url rah.views.house_party %}" method="post" id="house_party_form">
 		<div>
