--- a/templates/comments/_comment_form.html
+++ b/templates/comments/_comment_form.html
@@ -3,7 +3,8 @@
 {% if user.is_authenticated %}
 	<h3>Leave a Comment</h3>
 	{% get_comment_form for object as form %}
-	<form id="comment_form" action="{% comment_form_target %}" method="POST">
+	<form id="comment_form" action="{% comment_form_target %}" method="post">
+	    <div>
 		{% for field in form %}
 			{% if field.is_hidden %}
 				{{ field }}
@@ -24,5 +25,6 @@
 		<input type="hidden" name="next" value="{{ object.get_absolute_url }}" />
 		<input type="submit" value="Add comment" id="id_submit" />
 		{% csrf_token %}
+		</div>
 	</form>
 {% endif %}
