added the ability to place messages, for all requests just add the desired message using "messages.add_message".  However if the request is ajax, you will need to render the _messages.html template first, than attach this html snippet to your response. On the javascript side you can use the mod_messages function to attach the html snippet.

--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,11 @@
                 </div>
             </div>
         </div>
+		
+		<div id="message_box">
+			{% include '_messages.html' %}			
+		</div>
+
         <div id="content-container">
             <div id="major-col">
                 {% block content %}{% endblock %}
