--- a/templates/comments/_comment_form.html
+++ b/templates/comments/_comment_form.html
@@ -4,9 +4,10 @@
 	<h3>Leave a Comment</h3>
 	{% get_comment_form for object as form %}
 	<form id="comment_form" action="{% comment_form_target %}" method="post">
+		<div>
 		{% for field in form %}
 			{% if field.is_hidden %}
-				<div>{{ field }}</div>
+				{{ field }}
 			{% else %}
 				{% if field.name == "comment" or field.name == "honeypot" or field.name == "name" %}
 					{% if field.name != "name" or not user.get_full_name %}
@@ -21,8 +22,9 @@
 				{% endif %}
 			{% endif %}
 		{% endfor %}
-		<div><input type="hidden" name="next" value="{{ object.get_absolute_url }}" /></div>
-		<div><input type="submit" value="Add comment" id="id_submit" /></div>
+		<input type="hidden" name="next" value="{{ object.get_absolute_url }}" />
+		<input type="submit" value="Add comment" id="id_submit" />
 		{% csrf_token %}
+		</div>
 	</form>
 {% endif %}
