--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,7 @@
                 <a href="/" title="Repower America" class="site-logo">Repower @ Home</a>
                 <div id="header-links">
                     {% if user.is_authenticated %}
-                        {{ user.get_welcome }} | <a href="{% url rah.views.profile user.id %}">Profile</a> | 
-                        <a href="{% url rah.views.account %}">Account</a> | <a href="/logout">Logout</a>
+                        {{ user.get_welcome }} | <a href="/logout">Logout</a>
                     {% else %}
                         <a href="/login">Login</a> | <a href="/register">Sign Up</a>
                     {% endif %}
