--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,46 +1,55 @@
 {% extends "rah/base.html" %}
 {% block content %}
-	<div class='profile_heading'>
-		<img class='gravatar' src="{{ profile.get_gravatar_url }}" alt="user gravatar" />
-		<h2>
-			{% ifequal user.id profile.user.id %}
-				<a href="{% url rah.views.profile_edit profile.user.id %}">{{ profile.user.get_name }}</a>
-			{% else %}
-				{{ profile.user.get_name }}
-			{% endifequal %}
-		</h2>
-		<h5>{{ profile.location|default_if_none:"" }}</h5>
-		<br class="spacer" />
-	</div>
+    <div id="chart"></div>
+    <script type="text/javascript" charset="utf-8">
+        var chart_data = {{chart_data|safe}};
+    </script>
 	{% if in_progress %}
-		<div class="actions_block">
+		<div class="actions_block" id="actions_in_progress">
 			<h2>In Progress Actions</h2>
-		    {% for action in in_progress %}
+	        {% for action in in_progress %}
 				{% include 'rah/_action_nugget.html' %}
-		    {% endfor %}
-			<br class="spacer" />
-		</div>
-	{% endif %}
-	{% if completed %}
-		<div class="actions_block">
-			<h2>Completed Actions</h2>
-		    {% for action in completed %}
-		        {% include 'rah/_action_nugget.html' %}
-		    {% endfor %}
-			<br class="spacer" />
+	        {% endfor %}
 		</div>
 	{% endif %}
 	{% if recommended %}
-		<div class="actions_block">
+		<div class="actions_block" id="actions_recommended">
 			<h2>Recommended Actions</h2>
 		    {% for action in recommended %}
 		        {% include 'rah/_action_nugget.html' %}
 		    {% endfor %}
-			<br class="spacer" />
 		</div>
 	{% endif %}
 {% endblock %}
 {% block minorcol %}
-	{% include 'rah/_points.html' %}
+    <div>
+		<img class='gravatar' src="{{ profile.get_gravatar_url }}" alt="user gravatar" />
+		<h2>{{ profile.user.get_name }}</h2>
+		<p>
+		{% if profile.location %}
+            {{ profile.location }}<br/>
+		{% endif %}
+		{% ifequal user.id profile.user.id %}
+			<a href="{% url rah.views.profile_edit profile.user.id %}">Edit your profile</a>
+		{% endifequal %}
+		</p>
+	</div>
+	{% if completed %}
+	    <h2>Completed Actions</h2>
+        <p>
+	    {% for action in completed %}
+            <a href="{% url rah.views.action_detail action.slug %}">{{action.name}}</a> ({{action.total_points}} points)<br/>
+	    {% endfor %}
+	    </p>
+	{% endif %}
+	{% if not is_others_profile %}
+        {% include 'rah/_magnify.html' %}
+	{% endif %}
 {% endblock %}
+
+{% block extrajs %}
+    <!--[if IE]><script type="text/javascript" charset="utf-8" src="{{MEDIA_URL}}js/excanvas.min.js"></script><![endif]-->
+    <script type="text/javascript" charset="utf-8" src="{{ MEDIA_URL }}js/jquery.flot.min.js"></script>
+{% endblock %}
+
 {% block js %}page_profile{% endblock %}
