--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,10 @@
             </div>
         </div>
         <div id="feedback_dialog"></div>
-        <script type="text/javascript" charset="utf-8"> var rah_name = "{% block js %}{% endblock %}";</script>
+        <script type="text/javascript" charset="utf-8">
+            var rah_name = "{% block js %}{% endblock %}";
+            var media_url = "{{ MEDIA_URL }}"; // contains trailing slash
+        </script>
         <script type="text/javascript" charset="utf-8" src="{{ MEDIA_URL }}js/js_libs{%if not debug%}_min{%endif%}.js"></script>
         {% block extrajs %}{% endblock %}
         <script type="text/javascript" charset="utf-8" src="{{ MEDIA_URL }}js/rah{%if not debug%}_min{%endif%}.js"></script>
